kubernetes/gateway/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: arr-routes
  namespace: media
spec:
  parentRefs:
    - name: arr-gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /jellyfin
      backendRefs:
        - name: jellyfin
          port: 8096

    - matches:
      - path:
          type: PathPrefix
          value: /sonarr
      backendRefs:
        - name: sonarr
          port: 80

    - matches:
      - path:
          type: PathPrefix
          value: /radarr
      backendRefs:
        - name: radarr
          port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /prowlarr
      backendRefs:
        - name: prowlarr
          port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /qbittorrent
      backendRefs:
        - name: qbittorrent-webui
          port: 80
